[gd_scene load_steps=11 format=3 uid="uid://b65tttnfpxo0k"]

[ext_resource type="PackedScene" uid="uid://cgt1nf5dr404j" path="res://Overlap/Hitbox.tscn" id="1_7fgcs"]
[ext_resource type="Script" path="res://Projectiles/_tempBulletPlayer/PlayerBullet.gd" id="2_gqtb1"]
[ext_resource type="Texture2D" uid="uid://cyj0wfnes3um" path="res://Projectiles/_tempBulletPlayer/_tempBulletPlayer2.png" id="3_jrjwj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ak7cu"]
radius = 8.0

[sub_resource type="AtlasTexture" id="AtlasTexture_ttys5"]
atlas = ExtResource("3_jrjwj")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xqygh"]
atlas = ExtResource("3_jrjwj")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fg4vn"]
atlas = ExtResource("3_jrjwj")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ac0iw"]
atlas = ExtResource("3_jrjwj")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_egw0a"]
atlas = ExtResource("3_jrjwj")
region = Rect2(64, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_7a4q7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ttys5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xqygh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fg4vn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ac0iw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_egw0a")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[node name="Hitbox" instance=ExtResource("1_7fgcs")]
collision_layer = 64
collision_mask = 9
script = ExtResource("2_gqtb1")
SPEED = 300

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource("CircleShape2D_ak7cu")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." index="1"]
sprite_frames = SubResource("SpriteFrames_7a4q7")
autoplay = "default"
frame_progress = 0.607262

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="." index="2"]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
